--- a/index.html
+++ b/index.html
@@ -1,174 +1,253 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Cửa hàng Laptop & Phụ kiện - Mẫu</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quản lý Phiếu Nhập Hàng</title>
+
+<style>
+body {
+    font-family: Arial, sans-serif;
+    background: #f8fafc;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 30px;
+}
+
+h2 {
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+input, button {
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+}
+
+button {
+    cursor: pointer;
+}
+
+button.save { background: #4CAF50; color: white; }
+button.cancel { background: #ccc; }
+button.edit { background: #0a84ff; color: white; }
+button.delete { background: #d9534f; color: white; }
+
+/*bang chinh*/
+.table-container {
+    background: #D8EBEA;
+    padding: 15px;
+    border-radius: 8px;
+    margin-top: 15px; 
+
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border-bottom: 1px solid black;
+    text-align: center;
+    padding: 10px;
+}
+
+/* Các dòng sản phẩm */
+.product-row {
+    display: flex;
+    gap: 12px;
+    margin-bottom: 10px;
+}
+
+.product-row input {
+    flex: 1;
+}
+
+/*Them khoang cach giua cac o*/
+#addProductContainer,
+#editProductContainer {
+    margin-top: 15px;
+}
+
+.btn-add-product {
+    background: #0a84ff;
+    color: white;
+    border: none;
+    margin-top: 12px;
+}
+</style>
 </head>
 <body>
 
-  <!-- ========== HEADER ========== -->
-  <div class="header-top">
-    <div class="logo">Tên web + logo nhóm</div>
-    <div class="search">
-      <input id="searchInput" type="text" placeholder="Tìm sản phẩm..." />
+<div class="container">
+
+    <h2>Danh sách Phiếu nhập hàng</h2>
+    <input type="text" id="searchInput" placeholder="Tìm theo ID / tên sản phẩm / ngày..." style="width: 50%; margin-bottom: 12px" oninput="searchInvoice()">
+
+    <div class="table-container">
+        <table id="invoiceTable">
+            <thead>
+                <tr>
+                    <th>ID Phiếu</th>
+                    <th>Sản phẩm</th>
+                    <th>Ngày nhập</th>
+                    <th>Giá</th>
+                    <th>Số lượng</th>
+                    <th>Hành động</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
 
-    <div class="header-actions">
-      <div>🛒 Giỏ hàng</div>
-      <div>🌐 Tiếng Việt ▾</div>
-      <div>🔐 Đăng nhập</div>
-    </div>
-  </div>
+    <!-- Form thêm -->
+    <h2>Thêm Phiếu nhập hàng</h2>
+    <div>
+        <input id="addId" placeholder="ID phiếu">
+        <input id="addDate" type="date">
+        <div id="addProductContainer"></div>
 
-  <!-- ========== MENU NGANG ========== -->
-  <nav class="main-menu">
-    <div class="menu-wrap">
-      <ul class="menu-list">
-        <li> Danh mục sản phẩm
-          <div class="dropdown">
-            <div class="dropdown-wrapper">
-                <div class="dropdown-header">
-                <div class="tab">💻 Laptop</div>
-                <div class="tab">Phụ kiện</div>
-              </div>
-
-              <!-- body: khối trắng chia 2 cột -->
-              <div class="dropdown-body">
-                <div class="dropdown-inner">
-                  <div class="col">
-                    <ul>
-                      <li>Acer</li>
-                      <li>Asus</li>
-                      <li>Lenovo</li>
-                      <li>HP</li>
-                      <li>Dell</li>
-                    </ul>
-                  </div>
-                  <div class="middle-divider" ></div>
-                  <div class="col">
-                    <ul>
-                      <li>Balo</li>
-                      <li>Đế tản nhiệt</li>
-                      <li>Tai nghe</li>
-                      <li>Chuột</li>
-                      <li>Bàn phím</li>
-                    </ul>
-                  </div>
-                </div>
-              </div> <!--ket thuc body -->
-            </div>
-          </div>
-        </li>
-
-        <!-- Các menu khác -->
-        <li>Trang chủ</li>
-        <li>Tin tức</li>
-        <li>Khuyến mãi</li>
-        <li>Hotline</li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- ========== MAIN CONTAINER ========== -->
-  <div class="container">
-    <!-- slider -->
-    <div class="slider" id="slider">
-      <div class="slides" id="slides">
-        <div class="slide">Ảnh banner 1 (ô xám để chèn hình)</div>
-        <div class="slide">Ảnh banner 2</div>
-        <div class="slide">Ảnh banner 3</div>
-      </div>
-      <div class="arrow prev" id="prevBtn">&#10094;</div>
-      <div class="arrow next" id="nextBtn">&#10095;</div>
+        <button class="btn-add-product" onclick="addProductRow('addProductContainer')">+ Thêm sản phẩm</button>
+        <br><br>
+        <button class="save" onclick="saveInvoice()">Lưu phiếu nhập</button>
     </div>
 
-    <section class="products" id="suggestions">
-      <h2>Gợi ý cho bạn</h2>
-      <div class="tabs" id="brandTabs">
-        <button class="active">Acer</button>
-        <button>Asus</button>
-        <button>Lenovo</button>
-        <button>HP</button>
-        <button>Dell</button>
-      </div>
+    <!-- Form sửa -->
+    <h2>Chỉnh sửa Phiếu nhập hàng</h2>
+    <div>
+        <input id="editId" disabled>
+        <input id="editDate" type="date">
+        <div id="editProductContainer"></div>
 
-      <div class="grid-fixed-5" id="suggestGrid">
-        <div class="card">Ảnh SP 1</div><div class="card">Ảnh SP 2</div><div class="card">Ảnh SP 3</div><div class="card">Ảnh SP 4</div><div class="card">Ảnh SP 5</div>
-        <div class="card">Ảnh SP 6</div><div class="card">Ảnh SP 7</div><div class="card">Ảnh SP 8</div><div class="card">Ảnh SP 9</div><div class="card">Ảnh SP 10</div>
-        <div class="card">Ảnh SP 11</div><div class="card">Ảnh SP 12</div><div class="card">Ảnh SP 13</div><div class="card">Ảnh SP 14</div><div class="card">Ảnh SP 15</div>
-        <div class="card">Ảnh SP 16</div><div class="card">Ảnh SP 17</div><div class="card">Ảnh SP 18</div><div class="card">Ảnh SP 19</div><div class="card">Ảnh SP 20</div>
-        <div class="card">Ảnh SP 21</div><div class="card">Ảnh SP 22</div><div class="card">Ảnh SP 23</div><div class="card">Ảnh SP 24</div><div class="card">Ảnh SP 25</div>
-        <div class="card">Ảnh SP 26</div><div class="card">Ảnh SP 27</div><div class="card">Ảnh SP 28</div><div class="card">Ảnh SP 29</div><div class="card">Ảnh SP 30</div>
-        <div class="card">Ảnh SP 31</div><div class="card">Ảnh SP 32</div><div class="card">Ảnh SP 33</div><div class="card">Ảnh SP 34</div><div class="card">Ảnh SP 35</div>
-        <div class="card">Ảnh SP 36</div><div class="card">Ảnh SP 37</div><div class="card">Ảnh SP 38</div><div class="card">Ảnh SP 39</div><div class="card">Ảnh SP 40</div>
-        <div class="card">Ảnh SP 41</div><div class="card">Ảnh SP 42</div><div class="card">Ảnh SP 43</div><div class="card">Ảnh SP 44</div><div class="card">Ảnh SP 45</div>
-      </div>
-
-      <div class="pager" aria-hidden="true">
-        <button>1</button><button>2</button><button>3</button>
-      </div>
-    </section>
-
-    <!-- Phụ kiện: 2 hàng x 5 cột -->
-    <section class="products" id="accessories" style="margin-top:28px;">
-      <h2>Phụ kiện</h2>
-      <div class="tabs">
-        <button class="active">Balo</button>
-        <button>Đế tản nhiệt</button>
-        <button>Tai nghe</button>
-        <button>Chuột</button>
-        <button>Bàn phím</button>
-      </div>
-
-      <div class="grid-accessory-5" id="accessGrid">
-        <div class="card">PK 1</div><div class="card">PK 2</div><div class="card">PK 3</div><div class="card">PK 4</div><div class="card">PK 5</div>
-        <div class="card">PK 6</div><div class="card">PK 7</div><div class="card">PK 8</div><div class="card">PK 9</div><div class="card">PK 10</div>
-      </div>
-
-      <div class="pager" aria-hidden="true">
-        <button>1</button><button>2</button><button>3</button>
-      </div>
-    </section>
-  </div> <!-- end container -->
-
-  <!-- ========== FOOTER ========== -->
-  <footer>
-    <div class="footer-inner">
-      <div class="footer-left"></div>
-
-      <div class="footer-col">
-        <strong>Tên</strong>
-        <a href="#">Giới thiệu</a>
-        <a href="#">Tuyển dụng</a>
-      </div>
-
-      <div class="footer-col">
-        <strong>DỊCH VỤ</strong>
-        <a href="#">Trung tâm trợ giúp</a>
-        <a href="#">Hoạt động xã hội</a>
-        <a href="#">Hướng dẫn đặt hàng online</a>
-        <a href="#">Điều khoản sử dụng</a>
-        <a href="#">Chính sách thanh toán, đổi trả - hoàn hàng</a>
-      </div>
-
-      <div class="footer-right">
-        <strong>THEO DÕI CHÚNG TÔI</strong>
-        <div class="socials">
-          <div class="social-box"></div>
-          <div class="social-box"></div>
-          <div class="social-box"></div>
-        </div>
-      </div>
+        <button class="btn-add-product" onclick="addProductRow('editProductContainer')">+ Thêm sản phẩm</button>
+        <br><br>
+        <button class="cancel" onclick="cancelEdit()">Hủy</button>
+        <button class="save" onclick="updateInvoice()">Lưu thay đổi</button>
     </div>
 
-    <div class="footer-bottom">
-      <div class="footer-col">© 2025</div>
-      <div class="footer-col">CHÍNH SÁCH BẢO MẬT</div>
-      <div class="footer-right">LIÊN HỆ</div>
-    </div>
-  </footer>
-  <script src="script.js"></script>
+</div>
+<script>
+let invoices = [];
+let editingIndex = null;
+/*Thêm một dòng sản phẩm với các giá trị giá và số lượng*/
+function addProductRow(containerId) {
+    const container = document.getElementById(containerId);
+    const row = document.createElement("div");
+    row.className = "product-row";
+    row.innerHTML = `
+        <input placeholder="Tên sản phẩm">
+        <input placeholder="Giá" type="number">
+        <input placeholder="Số lượng" type="number">
+    `;
+    container.appendChild(row);
+}
+/*lưu 1 phiếu mới vào mảng */
+function saveInvoice() {
+    let id = document.getElementById("addId").value.trim();
+    let date = document.getElementById("addDate").value;
+    let products = [...document.querySelectorAll("#addProductContainer .product-row")].map(r => {
+        let i = r.querySelectorAll("input");
+        return { name: i[0].value, price: i[1].value, qty: i[2].value };
+    });
+    invoices.push({ id, date, products });
+    renderTable();
+    document.getElementById("addId").value = "";
+    document.getElementById("addDate").value = "";
+    document.getElementById("addProductContainer").innerHTML = "";
+}
+/*Có thêm 1 phiếu thì điều chỉnh lại bảng*/
+function renderTable() {
+    let tbody = document.querySelector("#invoiceTable tbody");
+    tbody.innerHTML = "";
+    invoices.forEach((invoice, index) => {
+        invoice.products.forEach((p, i) => {
+            tbody.innerHTML += `
+            <tr>
+                <td>${i === 0 ? invoice.id : ""}</td>
+                <td>${p.name}</td>
+                <td>${invoice.date}</td>
+                <td>${p.price}</td>
+                <td>${p.qty}</td>
+                ${i === 0 ? `
+                <td>
+                    <button class="edit" onclick="editInvoice(${index})">Sửa</button>
+                    <button class="delete" onclick="deleteInvoice(${index})">Xóa</button>
+                </td>` : `<td></td>`}
+            </tr>`;
+        });
+    });
+}
+
+/*nạp dữ liệu vào mục chỉnh sửa */
+function editInvoice(index) {
+    editingIndex = index;
+    let inv = invoices[index];
+    document.getElementById("editId").value = inv.id;
+    document.getElementById("editDate").value = inv.date;
+    document.getElementById("editProductContainer").innerHTML = "";
+    inv.products.forEach(p => {
+        addProductRow("editProductContainer");
+        let inputs = document.querySelectorAll("#editProductContainer .product-row:last-child input");
+        inputs[0].value = p.name;
+        inputs[1].value = p.price;
+        inputs[2].value = p.qty;
+    });
+
+    document.querySelector("h2:nth-of-type(3)").scrollIntoView({ behavior: "smooth" });
+}
+/*Cập nhật chỉnh sửa vào phiếu*/
+function updateInvoice() {
+    let date = document.getElementById("editDate").value;
+    let products = [...document.querySelectorAll("#editProductContainer .product-row")].map(r => {
+        let i = r.querySelectorAll("input");
+        return { name: i[0].value, price: i[1].value, qty: i[2].value };
+    });
+    invoices[editingIndex].date = date;
+    invoices[editingIndex].products = products;
+    renderTable();
+}
+
+function cancelEdit(){
+    document.getElementById("editProductContainer").innerHTML = "";
+}
+/*Lọc và hiển thị mục phù hợp*/
+function searchInvoice() {
+    let query = document.getElementById("searchInput").value.toLowerCase();
+    let tbody = document.querySelector("#invoiceTable tbody");
+    tbody.innerHTML = "";
+
+    invoices.forEach((invoice, index) => {
+        const match = invoice.id.toLowerCase().includes(query) ||
+                      invoice.date.toLowerCase().includes(query) ||
+                      invoice.products.some(p => p.name.toLowerCase().includes(query));
+
+        if (match) {
+            invoice.products.forEach((p, i) => {
+                tbody.innerHTML += `
+                <tr>
+                    <td>${i === 0 ? invoice.id : ""}</td>
+                    <td>${p.name}</td>
+                    <td>${invoice.date}</td>
+                    <td>${p.price}</td>
+                    <td>${p.qty}</td>
+                    ${i === 0 ? `
+                    <td>
+                        <button class="edit" onclick="editInvoice(${index})">Sửa</button>
+                        <button class="delete" onclick="deleteInvoice(${index})">Xóa</button>
+                    </td>` : `<td></td>`}
+                </tr>`;
+            });
+        }
+    });
+}
+</script>
 </body>
 </html>
