--- a/admin/adminlog.html
+++ b/admin/adminlog.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Admin Login</title>
-<link rel="stylesheet" href="adminlog.css"/>
+<link rel="stylesheet" href="/WebBanLap/assets/css/adminlog.css"/>
 </head>
 <body>
 <div class="login-container">
@@ -24,6 +24,6 @@
     <div id="errorMsg" class="error-message"></div>
   </form>
 </div>
-<script src="adminlog.js"></script>
+<script src="/WebBanLap/assets/js/adminlog.js"></script>
 </body>
 </html>
