--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,6 +6,7 @@
   <title>Dashboard Admin</title>
   <link rel="stylesheet" href="/WebBanLap/assets/css/admin.css" />
   <link rel="stylesheet" href="/WebBanLap/assets/css/pricing.css" />
+  <link rel="stylesheet" href="receipt.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -40,8 +41,8 @@
       <span class="menu-text">Giá bán</span>
     </div>
     <div class="menu-item" data-page="complaints">
-      <i class="fas fa-comment-dots"></i>
-      <span class="menu-text">Khiếu nại</span>
+      <i class="fas fa-file-alt"></i>
+      <span class="menu-text">Phiếu nhập hàng</span>
     </div>
     <div class="menu-item" data-page="settings">
       <i class="fas fa-cog"></i>
@@ -76,6 +77,7 @@
 
   <script src="/WebBanLap/assets/js/admin.js"></script>
   <script src="/WebBanLap/assets/js/pricing.js"></script>
+  <script src="receipt.js"></script>
 </body>
 </html>
 
