Thêm products.js

--- a/User/main.html
+++ b/User/main.html
@@ -483,7 +483,7 @@
                 </div>
                 <div class="card" data-type="de-tan-nhiet">
                     <div><img src="../assets/images/Dtn1.jpg" alt="PK" class="product-img"></div>
-                    <div class="product-name">Đế tản nhiệt Cooler Master Ergostand Air</div>
+                    <div class="product-name">Đế tản nhiệt Cooler Master Ergostand Air1</div>
                     <div class="product-price">690,000đ</div>
                     <div class="btn-detail">Chi tiết sản phẩm</div>
                 </div>
@@ -495,7 +495,7 @@
                 </div>
                 <div class="card" data-type="de-tan-nhiet">
                     <div><img src="../assets/images/Dtn1.jpg" alt="PK" class="product-img"></div>
-                    <div class="product-name">Đế tản nhiệt Cooler Master Ergostand Air</div>
+                    <div class="product-name">Đế tản nhiệt Cooler Master Ergostand Air2</div>
                     <div class="product-price">590,000đ</div>
                     <div class="btn-detail">Chi tiết sản phẩm</div>
                 </div>
@@ -507,7 +507,7 @@
                 </div>
                 <div class="card" data-type="de-tan-nhiet">
                     <div><img src="../assets/images/Dtn1.jpg" alt="PK" class="product-img"></div>
-                    <div class="product-name">Đế tản nhiệt Cooler Master Ergostand Air</div>
+                    <div class="product-name">Đế tản nhiệt Cooler Master Ergostand Air3</div>
                     <div class="product-price">790,000đ</div>
                     <div class="btn-detail">Chi tiết sản phẩm</div>
                 </div>
