--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/WebBanLap/assets/css/admin.css" />
   <link rel="stylesheet" href="/WebBanLap/assets/css/pricing.css" />
   <link rel="stylesheet" href="receipt.css"/>
+  <link rel="stylesheet" href="AdminProduct.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -77,6 +78,7 @@
 
   <script src="/WebBanLap/assets/js/admin.js"></script>
   <script src="/WebBanLap/assets/js/pricing.js"></script>
+  <script src="AdminProduct.js"></script>
   <script src="receipt.js"></script>
 </body>
 </html>
