--- a/admin/admin.html
+++ b/admin/admin.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard Admin</title>
   <link rel="stylesheet" href="/WebBanLap/assets/css/admin.css" />
-  <link rel="stylesheet" href="/WebBanLap/assets/css/pricing.css" />
-  <link rel="stylesheet" href="receipt.css"/>
-  <link rel="stylesheet" href="AdminProduct.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -77,9 +74,9 @@
   </div>
 
   <script src="/WebBanLap/assets/js/admin.js"></script>
+  <script src="/WebBanLap/assets/js/AdminProduct.js"></script>
   <script src="/WebBanLap/assets/js/pricing.js"></script>
-  <script src="AdminProduct.js"></script>
-  <script src="receipt.js"></script>
+  <script src="/WebBanLap/assets/js/receipt.js"></script>
 </body>
 </html>
 
