--- a/admin/admin.html
+++ b/admin/admin.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard Admin</title>
   <link rel="stylesheet" href="/WebBanLap/assets/css/admin.css" />
+  <link rel="stylesheet" href="/WebBanLap/assets/css/AdminProduct.css" />
+  <link rel="stylesheet" href="/WebBanLap/assets/css/stock.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -75,6 +77,7 @@
 
   <script src="/WebBanLap/assets/js/admin.js"></script>
   <script src="/WebBanLap/assets/js/AdminProduct.js"></script>
+  <script src="/WebBanLap/assets/js/stock.js"></script>
   <script src="/WebBanLap/assets/js/pricing.js"></script>
   <script src="/WebBanLap/assets/js/receipt.js"></script>
 </body>
