Chỉnh sửa phần productDetail của user

--- a/User/main.html
+++ b/User/main.html
@@ -672,20 +672,8 @@
                                     <span class="spec-value" id="spec-storage">-</span>
                                 </div>
                                 <div class="spec-item">
-                                    <span class="spec-label">Màn hình:</span>
-                                    <span class="spec-value" id="spec-display">-</span>
-                                </div>
-                                <div class="spec-item">
                                     <span class="spec-label">Card đồ họa:</span>
                                     <span class="spec-value" id="spec-gpu">-</span>
-                                </div>
-                                <div class="spec-item">
-                                    <span class="spec-label">Hệ điều hành:</span>
-                                    <span class="spec-value" id="spec-os">-</span>
-                                </div>
-                                <div class="spec-item">
-                                    <span class="spec-label">Pin:</span>
-                                    <span class="spec-value" id="spec-battery">-</span>
                                 </div>
                             </div>
                         </div>
@@ -786,9 +774,10 @@
                 <div class="footer-right">LIÊN HỆ</div>
             </div>
         </footer>
+        <script src="/WebBanLap/assets/js/AdminProduct.js"></script>
+        <script src="../assets/js/productDetail.js"></script>
         <script src="../assets/js/main.js"></script>
         <script src="../assets/js/cart.js"></script>
-        <script src="../assets/js/productDetail.js"></script>
         <script src="../assets/js/cartDetail.js"></script>
 </body>
 
