--- a/User/main.html
+++ b/User/main.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../assets/css/productDetail.css">
     <link rel="stylesheet" href="../assets/css/cartDetail.css">
     <link rel="stylesheet" href="../assets/css/log-reg.css">
-    <link rel="stylesheet" href="../assets/css/popupLogin.css">
+    <link rel="stylesheet" href="../assets/css/popupLog-Profile.css">
     <link rel="stylesheet" href="../assets/css/profile.css">
 
 </head>
@@ -910,7 +910,7 @@
     <script src="../assets/js/cart.js"></script>
     <script src="../assets/js/cartDetail.js"></script>
     <script src="../assets/js/log-reg.js"></script>
-    <script src="../assets/js/popupLogin.js"></script>
+    <script src="../assets/js/popupLog-Profile.js"></script>
     <script src="../assets/js/profile.js"></script>
 </body>
 
