Sửa ProductDetail bên User

--- a/User/main.html
+++ b/User/main.html
@@ -223,7 +223,7 @@
 
                     <!-- Right Column -->
                     <div class="product-right">
-                        <div class="specs-section">
+<div class="specs-section">
                             <h3>Thông số kỹ thuật</h3>
                             <div class="specs-content">
                                 <div class="spec-item">
@@ -235,12 +235,20 @@
                                     <span class="spec-value" id="spec-ram">-</span>
                                 </div>
                                 <div class="spec-item">
-                                    <span class="spec-label">Ổ cứng:</span>
-                                    <span class="spec-value" id="spec-storage">-</span>
-                                </div>
-                                <div class="spec-item">
                                     <span class="spec-label">Card đồ họa:</span>
                                     <span class="spec-value" id="spec-gpu">-</span>
+                                </div>
+                                <div class="spec-item">
+                                    <span class="spec-label">Màn hình:</span>
+                                    <span class="spec-value" id="spec-screen">-</span>
+                                </div>
+                                <div class="spec-item">
+                                    <span class="spec-label">Pin:</span>
+                                    <span class="spec-value" id="spec-battery">-</span>
+                                </div>
+                                <div class="spec-item">
+                                    <span class="spec-label">Hệ điều hành:</span>
+                                    <span class="spec-value" id="spec-os">-</span>
                                 </div>
                             </div>
                         </div>
